improve front, add yandex integration
